fixed overlapping text

--- a/substyle.css
+++ b/substyle.css
@@ -1,6 +1,12 @@
-/* STYLE FOR SUBPAGE - PRODUCT DESIGN GALLERY */
+/* STYLE FOR PRODUCT DESIGN GALLERY - KAIA PILL PACK */
 .no-underline{
     text-decoration: none;
+}
+
+.align-right{
+    float: right;
+    font-style: italic ;
+    color: #bbdee4;
 }
 
 .subpage-header{
@@ -51,10 +57,6 @@
     line-height: 0.1;
 }
 
-.project-desc{
-    line-height: 0.1;
-}
-
 .gallery-cell{
     max-width: 100%;
     min-width: 50%;
@@ -67,8 +69,6 @@ footer{
     padding: 30px 0 10px 0;
 }
 
-
-/* RESPONSIVE DESIGN */
 /* LAPTOP HALF SCREEN */
 @media screen and (max-width:1000px){
     .prodes-project{
@@ -77,7 +77,3 @@ footer{
         width: 95%;
     }
 }
-
-
-/* MOBILE PHONE */
-
